<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="30dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/view_padding">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/add_edit_textsize"
            android:paddingRight="25dp"/>
        <TextView
            android:id="@+id/text_infoname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoname"
            android:textSize="@dimen/add_edit_textsize"
            android:paddingRight="25dp"/>



    </LinearLayout>




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/view_padding">

        <TextView
            android:id="@+id/text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infodisc"
            android:textSize="@dimen/add_edit_textsize"
            android:paddingRight="25dp"/>
        <TextView
            android:id="@+id/text_infodisc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infodisc_text"
            android:textSize="@dimen/add_edit_textsize"
            android:paddingRight="25dp"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/view_padding"
        android:weightSum="1">

        <Button
            android:id="@+id/edit_query"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/button_padding"
            android:text="@string/add_info"
            android:layout_gravity="center"
            android:layout_weight="6.78" />

    </LinearLayout>


</LinearLayout>